maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:12: error: not found: value X0
getIndication(X0,Y0)
              ^